xidlc/tests/invalid/http_security_api_key_invalid_location.idl
#pragma xidlc package xidlc
#pragma xidlc version v1.0.0

interface InvalidApiKeyLocationSecurityService {
    @api_key(in = "body", name = "auth")
    @get(path = "/reports")
    string list_reports();
};
